--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,16 @@ asgiref==1.1.1
 attrs==16.3.0
 autobahn==17.5.1
 Automat==0.5.0
+cached-property==1.3.0
 channels==1.1.3
 constantly==15.1.0
 daphne==1.2.0
 Django==1.11.1
 django-channels==0.7.0
 django-filter==1.0.3
+django-url-filter==0.3.2
 djangorestframework==3.6.3
+enum34==1.1.6
 incremental==16.10.1
 Markdown==2.6.8
 msgpack-python==0.4.8
